src/C Wrapper/FmiWrapper.h

/*! The state struct that contains enviroment callbacks and the fmu functions. */
typedef struct wrappedModel wrappedModel;
/*! A simplified log callback for the fmu. */
typedef void (*logCallback)(const char *instanceName, int status, const char *category, const char *message);
/*! A simplified stepFinished callback for the fmu. */
typedef void (*stepFinishedCallback)(int status);
/* Creation and destruction of FMU instances and setting debug status */

/*!
    \brief Create a instance of a fmu that uses the simplified callbacks.
    \param fileName The filename of the binary. Can be a relative or ideally a full path.
    \param logCallback This function will be called when the fmu logs.
    \param stepFinishedCallback This function will be called when a simulation step has finished.
    \param other These parameters match the ones from the fmi2 standard.
    \return A pointer to a component that wraps the fmu functions. Pass this pointer to the fmi2 function calls. Returns NULL if it failed.
*/
PUBLIC_EXPORT wrappedModel *fmi2Instantiate(const char *fileName, logCallback logCallback, stepFinishedCallback stepFinishedCallback,
                                            const char *instanceName, int fmuType, const char *guid, const char *resourceLocation, bool visible, bool loggingOn);
/*!
    \brief Releases the underlying fmu instance and the wrapper.
    \param wrapper Pointer returned by createWrapper.
*/
PUBLIC_EXPORT void fmi2FreeInstance(wrappedModel *wrapper);
PUBLIC_EXPORT int fmi2SetDebugLogging(wrappedModel *wrapper, bool loggingOn, size_t nCategories, const char *categories[]);
/* Inquire version numbers of header files and setting logging status */
PUBLIC_EXPORT const char *fmi2GetTypesPlatform(wrappedModel *wrapper);
PUBLIC_EXPORT const char *fmi2GetVersion(wrappedModel *wrapper);
/* Enter and exit initialization mode, terminate and reset */
PUBLIC_EXPORT int fmi2SetupExperiment(wrappedModel *wrapper, bool toleranceDefined, double tolerance, double startTime, bool stopTimeDefined, double stopTime);
PUBLIC_EXPORT int fmi2EnterInitializationMode(wrappedModel *wrapper);
PUBLIC_EXPORT int fmi2ExitInitializationMode(wrappedModel *wrapper);
PUBLIC_EXPORT int fmi2Terminate(wrappedModel *wrapper);
PUBLIC_EXPORT int fmi2Reset(wrappedModel *wrapper);